# bazel-go-hello-world

./: .gitignore  BUILD.bazel  README.md
tools/: BUILD.bazel  goodbye_world.go  hello_world.go
utils/: BUILD.bazel  utils.go  utils_test.go
